Control page calls hac0202ctrl